--- a/aula04.html
+++ b/aula04.html
@@ -12,7 +12,7 @@
 			Ouvistes dos suspiros o rumor
 			Do meu primeiro e juvenil error,
 			Quando era outra a minha condição;
-		<\pre>	
+		</pre>	
 		</div>
 
 		<div>
@@ -23,7 +23,7 @@
 			De ti, que tens a chave dos destinos 
 			Em que arderam meus sonhos cristalinos 
 			Feitos cinzas que em pranto ao vento espalho?
-		<\pre>
+		</pre>
 
 		</div>
 
@@ -34,35 +34,35 @@
 			Dos brancos pés dos pequeninos, 
 			Voz das manhãs cantando pelos sinos, 
 			Rosa mais alta no mais alto galho:
-		<\pre>
+		</pre>
 		</div>
 
 		<div>
 		<h4>		ccd-eed</h4>
 		<hr>
-		<p>	Eu quero amar, amar perdidamente!</p>
-		<p>	Amar só por amar: Aqui… além…</p>
-		<p>	Mais Este e Aquele, o Outro e toda a gente</p>
-		<p>	Amar! Amar! E não amar ninguém!</p>
+		<p>	Eu quero amar, amar perdidamente!
+			Amar só por amar: Aqui… além…
+			Mais Este e Aquele, o Outro e toda a gente
+			Amar! Amar! E não amar ninguém!</p>
 		</p>
 		</div>
 
 		<div>
 		<h5>		ccd-eed</h5>
 		<hr>
-		<p>	Recordar? Esquecer? Indiferente!…</p>
-		<p>	Prender ou desprender? É mal? É bem?</p>
-		<p>	Quem disser que se pode amar alguém</p>
-		<p>	Durante a vida inteira é porque mente!</p>
+		<p>	Recordar? Esquecer? Indiferente!…
+			Prender ou desprender? É mal? É bem?
+			Quem disser que se pode amar alguém
+			Durante a vida inteira é porque mente!</p>
 		
 		</div>
 
 		<div>
 		<h6>		ccd-eed</h6>
 		<hr>
-		<p>	Eu quero amar, amar perdidamente!</p>
-		<p>	Amar só por amar: Aqui… além…</p>
-		<p>	Amar! Amar! E não amar ninguém!</p>
+		<p>	Eu quero amar, amar perdidamente!
+			Amar só por amar: Aqui… além…
+			Amar! Amar! E não amar ninguém!</p>
 		</div>
 
 		</body>
